[package]
name = "ast-find"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-tools-common = { path = "../common" }
anyhow = { workspace = true }
blake3 = { workspace = true }
clap = { workspace = true }
ignore = "0.4"
phf = { version = "0.11", features = ["macros"] }
rayon = "1.9"
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }
tree-sitter = "0.22"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-c-sharp = "0.21"
tracing = "0.1"
tracing-subscriber = "0.3"
memmap2 = "0.9"
itoa = "1"
