[package]
name = "web-get"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-tools-common = { path = "../common" }
anyhow = { workspace = true }
ammonia = "4"
blake3 = { workspace = true }
bytes = "1"
chardetng = "0.1"
clap = { workspace = true }
encoding_rs = "0.8"
futures = "0.3"
html2md = "0.2"
maplit = "1.0"
mime = "0.3"
regex = "1"
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate", "json", "stream"] }
scraper = "0.20"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
